Update SheltersCard.js and SheltersCard.scss for responsive styling adjustments and header visibility, fixed header displaying issue on mobile detailed view, removed icon

--- a/client/src/components/SheltersCard/SheltersCard.scss
+++ b/client/src/components/SheltersCard/SheltersCard.scss
@@ -257,6 +257,10 @@ h3 {
     //   height: 2.5rem;
     //   font-size: 0.9rem;
   }
+
+  @include desktop {
+    max-width: 30rem;
+  }
 }
 
 .btn {
@@ -476,7 +480,6 @@ h3 {
   padding: 1rem;
   text-transform: uppercase;
   color: rgb(255, 255, 255);
-  // font-family: 'Bungee Shade', sans-serif;
   font-family: 'Toronto Subway Bold';
   // background-image: linear-gradient(147deg, #c3cbdc24 23%, #e0f2ff24 66%);
   // backdrop-filter: blur(25px);
@@ -493,7 +496,7 @@ h3 {
     align-items: center;
   }
   @include tablet {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     line-height: 3rem;
     min-width: 24rem;
     display: inline-flex;
@@ -502,14 +505,12 @@ h3 {
   }
   @include desktop {
     display: inline-flex;
-    font-size: 2.5rem;
-    line-height: 3.25rem;
+    letter-spacing: -0.1px;
+    font-size: 3.3rem;
+    line-height: 4rem;
     min-width: 22rem;
+    // font-family: 'Ostrich Sans Bold';
   }
-}
-
-.fa-chevron-icons {
-  padding-left: 0.5rem;
 }
 
 .shelter-item__details {
@@ -526,7 +527,7 @@ h3 {
 
 .shelter-item__availability {
   color: ghostwhite;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.6;
   font-weight: normal;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -534,9 +535,10 @@ h3 {
   justify-content: center;
   align-items: center;
   line-height: 2.1rem;
-  font-family: 'Avenir Next';
+  font-family: 'League Spartan Regular';
   font-weight: 600;
-  // CURPRIT #6
+  text-transform: uppercase;
+  letter-spacing: 1px;
 
   @include mobile {
     font-size: 0.8rem;
@@ -549,6 +551,7 @@ h3 {
 
   @include desktop {
     min-width: max-content;
+    max-width: 30rem;
   }
 }
 
@@ -610,11 +613,12 @@ h3 {
 
   @include mobile {
     font-size: 1.01rem;
+    width: 100%;
   }
 
   @include tablet {
     font-size: 1.1rem;
-    padding: 0.6rem;
+    width: 100%;
   }
 
   @include desktop {
@@ -737,7 +741,6 @@ h3 {
 }
 
 .mobile__shelter-item__availability {
-  font-size: 1.4rem;
   padding: 0.6rem;
   background-image: linear-gradient(135deg, #6d5dfc 0%, #c792ec 100%);
   border-radius: 12px;
@@ -745,18 +748,20 @@ h3 {
   margin-bottom: 1rem;
   margin-top: 1rem;
   width: 95%;
-  font-family: 'Toronto Subway Bold';
-  font-variant: all-small-caps;
+  font-family: 'League Spartan Regular';
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 
   @include mobile {
-    font-size: 1.25rem;
+    font-size: 1rem;
     width: 95vw;
   }
 
   @include tablet {
     width: 100%;
     letter-spacing: normal;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
@@ -792,6 +797,7 @@ h3 {
   align-items: center;
   color: black;
   border-radius: 0;
+  cursor: pointer;
 }
 
 .mobile-header {
@@ -801,6 +807,7 @@ h3 {
   padding: 1rem;
   width: 100%;
   background-color: #2a445e;
+  letter-spacing: 2px;
 }
 
 .detailed-view__container {
@@ -815,7 +822,7 @@ h3 {
   }
 
   @include tablet {
-    padding: 1rem;
+    padding-bottom: 3.5rem;
     justify-content: center;
   }
 }
@@ -843,16 +850,37 @@ h3 {
 .mobile-left {
   text-align: right;
   border-left: none;
-  // margin-right: 0.5rem;
-  // letter-spacing: 0.2px;
   white-space: pre-line;
+  font-family: 'Avenir Next';
+  line-height: 1.5rem;
+  letter-spacing: 1px;
+  font-variant-caps: all-petite-caps;
+
+  @include mobile {
+    font-size: 1rem;
+  }
+
+  @include tablet {
+    font-size: 1.1rem;
+  }
 }
 
 .mobile-right {
   text-align: left;
-  // margin-left: 0.5rem;
-  // letter-spacing: 0.4px;
   white-space: pre-line;
+  font-family: 'Ostrich Inline Italic';
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 2px;
+  font-variant-caps: all-petite-caps;
+
+  @include mobile {
+    font-size: 1.2rem;
+  }
+
+  @include tablet {
+    font-size: 1.3rem;
+  }
 }
 
 .location-text {
